Sun Oct 12 23:11:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/Concurrency_Service/Concurrency_Service.cpp
        * orbsvcs/Event_Service/Event_Service.cpp
        * orbsvcs/Event_Service/Event_Service.h
        * orbsvcs/examples/CosEC/TypedSimple/Consumer.cpp
        * orbsvcs/examples/ImR/Advanced/TestServer.cpp
        * orbsvcs/LifeCycle_Service/LifeCycle_Service.cpp
        * orbsvcs/orbsvcs/Event/EC_Default_Factory.cpp
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Acceptor.cpp
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Connection_Handler.cpp
          ACE_TCHAR fixes

Sun Oct 12 23:10:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * utils/catior/catior.cpp
        * utils/monitor/monitor_client.cpp
          ACE_TCHAR fixes

Sun Oct 12 23:06:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Abstract_Interface/client.cpp
        * tests/Bug_1254_Regression/server.cpp
        * tests/Bug_2134_Regression/Hello.cpp
        * tests/Bug_2234_Regression/client.cpp
        * tests/Bug_2234_Regression/server.cpp
        * tests/Bug_3276_Regression/Manager.cpp
        * tests/CDR/octet_sequence.cpp
        * tests/CDR/tc.cpp
        * tests/CodeSets/simple/client.cpp
        * tests/CSD_Strategy_Tests/TP_Test_Dynamic/server.cpp
        * tests/HandleExhaustion/server.cpp
        * tests/InterOp-Naming/INS_test_client.cpp
        * tests/NestedUpcall/Simple/server.cpp
        * tests/OBV/Truncatable/client.cpp
        * tests/ORB_Local_Config/Two_DLL_ORB/client.cpp
        * tests/ORB_Local_Config/Two_DLL_ORB/server.cpp
        * tests/ORT/server.cpp
        * tests/Param_Test/anyop.cpp
        * tests/POA/Adapter_Activator/server.cpp
        * tests/POA/Default_Servant2/client.cpp
        * tests/POA/Default_Servant2/server.cpp
        * tests/POA/Explicit_Activation/server.cpp
        * tests/POA/Generic_Servant/client.cpp
        * tests/POA/NewPOA/NewPOA.cpp
        * tests/POA/On_Demand_Loading/Server_Manager.cpp